--- a/src/styles.css
+++ b/src/styles.css
@@ -2,10 +2,16 @@ body {
   font-family: sans-serif;
 }
 
+table {
+  border-collapse: collapse;
+}
 td {
   border: 1px solid black;
   height: 60px;
   width: 60px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  font-size: 30px;
 }
 
 canvas {
