--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,17 @@ body {
   font-family: sans-serif;
 }
 
+#progress {
+  width: 100%;
+  background-color: grey;
+}
+
+#timer {
+  width: 1%;
+  height: 30px;
+  background-color: green;
+}
+
 .color1 {
   background-color: rgb(124, 252, 0);
 }
